force-app/main/default/objects/Behavior_Assessment_Response__c/Behavior_Assessment_Response__c.object-meta.xml
<CustomObject>
    <label>Behavior Assessment Response</label>
    <nameField>
        <displayFormat>BAR-{0000}</displayFormat>
        <label>Behavior Assessment Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behavior Assessment Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>