force-app/main/default/objects/Behavior_Assessment_Response__c/fields/Behavior_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Assessment__c</fullName>
    <label>Behavior Assessment</label>
    <referenceTo>Behavior_Assessment__c</referenceTo>
    <relationshipLabel>Behavior Assessment Responses</relationshipLabel>
    <relationshipName>Behavior_Assessment_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>