force-app/main/default/objects/Behavior_Assessment_Response__c/fields/Evaluation_Label__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Label__c</fullName>
    <label>Evaluation Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>