force-app/main/default/objects/Behavior_Assessment_Response__c/fields/Evaluation_Response__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Response__c</fullName>
    <label>Evaluation Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>