force-app/main/default/objects/Behavior_Assessment_Response__c/fields/Evaluation_Score__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Score__c</fullName>
    <label>Evaluation Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assessment_Scores</valueSetName>
    </valueSet>
</CustomField>