force-app/main/default/objects/Behavior_Assessment_Response__c/fields/Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Type__c</fullName>
    <label>Evaluation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Handling</fullName>
            </value>
            <value>
                <fullName>Kennel Presence</fullName>
            </value>
            <value>
                <fullName>Leash Walking</fullName>
            </value>
            <value>
                <fullName>Leashing</fullName>
            </value>
            <value>
                <fullName>Social Behavior Dogs</fullName>
            </value>
            <value>
                <fullName>Social Behavior People</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>