force-app/main/default/objects/Behavior_Assessment_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Behavior_Assessment__c</columns>
    <columns>Evaluation_Type__c</columns>
    <columns>Evaluation_Label__c</columns>
    <columns>Evaluation_Response__c</columns>
    <columns>Evaluation_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>